Tooltip slides in and out from left side (works in fennec too). Add about data to end of Jot tab. Move timelog entry to top, not to be obscured by android soft keyboard. Select all of about data on click (also works with touch in fennec). TODO: Copy of selection contains random whitespace corruption in fennec. Refactor anonymous function in getAboutData for re-use. Add control to report bugs, suggest features to inline options. Remove About button from inline options. Add hidden issue searching url to inline options (used by REPORT_ISSUE button).

--- a/Jot/data/display.css
+++ b/Jot/data/display.css
@@ -15,6 +15,18 @@
     word-wrap: break-word;*/
 }
 
+/*.about {
+    white-space: normal;
+}
+
+.about:active {
+    white-space: pre;
+}
+
+.about:hover {
+    white-space: pre;
+}*/
+
 .activity {
     display: block;
     word-break: break-all;
@@ -27,28 +39,30 @@
     word-wrap: normal;
 }
 
+/*.entry {
+    position: absolute;
+}*/
+
 textarea+p.tooltip_activity {
     margin: 0.5em; /*display: flex;
     justify-content: flex-end;*/
     position: fixed;
+    left: -80em;
     border-radius: 0.5em;
     padding: 0.5em;
     background-color: gray;
     color: white;
-    opacity: 0;
-    transition-property: opacity;
-    transition-duration: 2s;
-    transition-timing-function: ease-in;
+    transition: left 1s ease-in-out;
 }
 
 textarea:active+p.tooltip_activity {
-    opacity: 0.8;
-    /*display: inline-block;*/
+    transition: left 1s ease-in-out;
+    left: 0;
 }
 
 textarea:hover+p.tooltip_activity {
-    opacity: 0.8;
-    /*display: inline-block;*/
+    transition: left 1s ease-in-out;
+    left: 0;
 }
 
 *:focus {
